--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -82,7 +82,7 @@
 \AtEveryBibitem{\clearlist{language}} % clears language
 \renewcommand*\bibnamedash{\rule[0.48ex]{3em}{0.14ex}\space}
 \renewcommand*{\multinamedelim}{,\space}
-\renewcommand*{\finalnamedelim}{,\space}
+\renewcommand*{\finalnamedelim}{\space\&\space}
 
 \addbibresource{refs.bib}
 
@@ -259,7 +259,7 @@
 % -------------------------------------------------------------------------------
 \title{\longtitle}
 
-\includeonly{background,automatic_graph_tracking}
+% \includeonly{background,automatic_graph_tracking}
 
 \begin{document}
 \chapterstyle{hangnum}
