--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -1083,6 +1083,24 @@
   pagetotal = {60}
 }
 
+@article{naumann2007optimal,
+  title = {Optimal {{Jacobian}} Accumulation Is {{NP}}-Complete},
+  author = {Naumann, Uwe},
+  date = {2007-11-30},
+  journaltitle = {Mathematical Programming},
+  shortjournal = {Math. Program.},
+  volume = {112},
+  pages = {427--441},
+  issn = {0025-5610, 1436-4646},
+  doi = {10.1007/s10107-006-0042-z},
+  url = {http://link.springer.com/10.1007/s10107-006-0042-z},
+  urldate = {2020-11-10},
+  abstract = {We show that the problem of accumulating Jacobian matrices by using a minimal number of floating-point operations is NP-complete by reduction from Ensemble Computation. The proof makes use of the fact that, deviating from the state-of-the-art assumption, algebraic dependences can exist between the local partial derivatives. It follows immediately that the same problem for directional derivatives, adjoints, and higher derivatives is NP-complete, too.},
+  file = {/home/philipp/Zotero/storage/IFV7FIFF/Naumann - 2007 - Optimal Jacobian accumulation is NP-complete.pdf},
+  langid = {english},
+  number = {2}
+}
+
 @online{neubig2017dynet,
   title = {{{DyNet}}: {{The Dynamic Neural Network Toolkit}}},
   shorttitle = {{{DyNet}}},
@@ -1169,6 +1187,16 @@
   url = {https://sourceforge.net/projects/mcmc-jags/files/Manuals/4.x/jags_user_manual.pdf/download},
   urldate = {2020-07-17},
   file = {/home/philipp/Zotero/storage/XIKA757A/jags_user_manual.pdf}
+}
+
+@report{pock2017convex,
+  title = {Convex {{Optimization}}},
+  author = {Pock, Thomas},
+  date = {2017},
+  institution = {{Graz University of Technology}},
+  location = {{Graz}},
+  file = {/home/philipp/Zotero/storage/MNFIPBKR/convopt-script.pdf},
+  type = {Lecture Notes}
 }
 
 @book{press2007numerical,
